Added change dark mode btn

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 </head>
 
 <body>
+    <header style="background: none;">
+        <nav style="background: none;">
+            <button class="change-theme btn">
+                <span class="material-symbols-outlined">
+                    dark_mode
+                </span>
+            </button>
+        </nav>
+    </header>
     <main>
         <div class="frame center">
             <div class="container-fluid frame__head">
